fixed navbar and spacings

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -5,7 +5,7 @@
 		font-family: "Coolvetica";
 		font-weight: 400;
 		color: #ffffff;
-		left: 5px;
+		left: 20px;
 		position: relative;
 
 		&::before {
