--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -50,12 +50,12 @@ nav {
 
 	.mobile-menu {
 		width: 100%;
-		height: 90vh;
+		height: 100vh;
 		position: absolute;
 		top: 0;
 		left: 0;
 		background-color: #222831f1;
-		z-index: 2;
+		z-index: 10;
 		display: flex;
 		justify-content: center;
 		flex-direction: column;
@@ -64,8 +64,8 @@ nav {
 		padding-left: 0;
 
 		a {
-			padding-top: 2.5rem;
-			padding-bottom: 2.5rem;
+			padding-top: 1.5rem;
+			padding-bottom: 1.5rem;
 		}
 
 		.resume {
