--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -33,7 +33,7 @@
 	.title {
 		font-size: 3.4rem;
 		font-family: "Coolvetica";
-		left: 5px;
+		left: 20px;
 		position: relative;
 
 		span {
